--- a/rspGame/style.css
+++ b/rspGame/style.css
@@ -34,7 +34,7 @@ main {
   width: 55px;
   height: 40px;
   margin: 10px;
-  background-color: #c6ffdd;
+  background-color: #b1ffd0;
   border-radius: 7%;
   color: white;
   text-shadow: 1px 1px 3px gray;
